<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlayToPulsar</string>
    <string name="action_settings">Settings</string>
    <string name="xbmc_connection_status">XBMC Connection status</string>
    <string name="push_to_pulsar">Push to pulsar</string>
    <string name="toast_need_host">Please set XMBC/Kodi host and port</string>
    <string name="toast_not_a_torrent">The information in the clipboard it is not a torrent</string>

    <!-- preferences -->
    <string name="pref_host_category">XBMC host address</string>
    <string name="host_direction_title">complete host address</string>
    <string name="host_direction_summary">pattern: ip or name[:port]</string>
    <string name="no_torrent_to_push">no torrent to push</string>
    <string name="pref_auth_switch_on">Authentication enabled</string>
    <string name="pref_auth_switch_off">Authentication disabled</string>
    <string name="pref_username">Username</string>
    <string name="pref_username_summary">Username for XBMC/Kodi authenticated connections</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Password for XBMC/Kodi authenticated connections</string>
    <string name="pref_switch_auth_summary">Set it on if your XBMC/Kodi connection authentication is enabled</string>
    <string name="pref_direct_submit_switch_on">Automatic submit is enabled</string>
    <string name="pref_direct_submit_switch_off">Automatic submit is disabled</string>
    <string name="pref_switch_direct_submit_summary">Set it on if your want to submit the torrent to XBMC/Kodi directly</string>
    <string name="copy_from_clipboard">Paste from clipboard</string>

</resources>
