<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_host_category" android:key="pref_key_storage_settings">
        <EditTextPreference android:key="pref_host_direction" android:title="@string/host_direction_title" android:summary="@string/host_direction_summary"/>
        <SwitchPreference android:summaryOn="@string/pref_auth_switch_on" android:key="pref_switch_auth" android:summaryOff="@string/pref_auth_switch_off" android:summary="@string/pref_switch_auth_summary"/>
        <EditTextPreference android:dependency="pref_switch_auth" android:key="pref_username" android:summary="@string/pref_username_summary" android:title="@string/pref_username"/>
        <EditTextPreference android:dependency="pref_switch_auth" android:key="pref_password" android:summary="@string/pref_password_summary" android:title="@string/pref_password" android:inputType="textPassword"/>
    </PreferenceCategory>
</PreferenceScreen>
