<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reemplazable.playtopulsar.PlayToPulsarActivity$PlaceholderFragment" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentEnd="false"
	            android:layout_alignParentStart="true"
	            android:layout_centerHorizontal="false"
	            android:layout_centerInParent="false"
	            android:layout_centerVertical="true"
	            android:text="@string/xbmc_connection_status"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <ToggleButton
	            android:id="@+id/toggleButton1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentEnd="true"
	            android:layout_alignParentRight="false"
	            android:layout_centerVertical="true"
	            android:clickable="false" />
        
        </RelativeLayout>
	    
	    <Button
	        android:id="@+id/sendToXBMCButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/push_to_pulsar"
	        android:enabled="false" />
	    
	    <TextView
	        android:id="@+id/textXBMCUri"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:text="@string/no_torrent_to_push" />
        
</LinearLayout>